--- a/branches/limehd/res/xml/lime_phonetic.xml
+++ b/branches/limehd/res/xml/lime_phonetic.xml
@@ -68,8 +68,7 @@
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:iconPreview="@drawable/shift_l" android:keyIcon="@drawable/shift" android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="122" android:iconPreview="@drawable/phonetic_z_s_l" android:keyIcon="@drawable/phonetic_z_s"/>
+        <Key android:codes="122" android:iconPreview="@drawable/phonetic_z_s_l" android:keyIcon="@drawable/phonetic_z_s" android:keyEdgeFlags="left"/>
         <Key android:codes="120" android:iconPreview="@drawable/phonetic_x_s_l" android:keyIcon="@drawable/phonetic_x_s"/>
         <Key android:codes="99" android:iconPreview="@drawable/phonetic_c_s_l" android:keyIcon="@drawable/phonetic_c_s"/>
         <Key android:codes="118" android:iconPreview="@drawable/phonetic_v_s_l" android:keyIcon="@drawable/phonetic_v_s"/>
@@ -77,20 +76,16 @@
         <Key android:codes="110" android:iconPreview="@drawable/phonetic_n_s_l" android:keyIcon="@drawable/phonetic_n_s"/>
         <Key android:codes="109" android:iconPreview="@drawable/phonetic_m_s_l" android:keyIcon="@drawable/phonetic_m_s"/>
         <Key android:codes="59" android:iconPreview="@drawable/phonetic_semicolon_l" android:keyIcon="@drawable/phonetic_semicolon"/>
-        <Key android:codes="-5" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyIcon="@drawable/sym_keyboard_delete" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
+        <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
     </Row>
     
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l" android:keyIcon="@drawable/phonetic_comma"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="46" 
-        		android:iconPreview="@drawable/phonetic_dot_l"
-				android:popupKeyboard="@xml/popup_c_punctuation"    
-        		android:keyIcon="@drawable/phonetic_dot"/>
-        <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
-        <Key android:codes="-2" android:keyIcon="@drawable/number" android:keyWidth="10%p" android:iconPreview="@drawable/number_l"/>
+        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
+        <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l" android:keyWidth="15%p" android:keyIcon="@drawable/phonetic_comma"/>
+        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="25%p" android:isRepeatable="true"/>
+        <Key android:codes="-5" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
     
