--- a/branches/limehd/res/xml/lime_phonetic.xml
+++ b/branches/limehd/res/xml/lime_phonetic.xml
@@ -62,9 +62,9 @@
         <Key android:codes="103" android:iconPreview="@drawable/phonetic_g_s_l" android:keyIcon="@drawable/phonetic_g_s"/>
         <Key android:codes="104" android:iconPreview="@drawable/phonetic_h_s_l" android:keyIcon="@drawable/phonetic_h_s"/>
         <Key android:codes="106" android:iconPreview="@drawable/phonetic_j_s_l" android:keyIcon="@drawable/phonetic_j_s"/>
-        <Key android:codes="107" android:iconPreview="@drawable/phonetic_k_u_l" android:keyIcon="@drawable/phonetic_k_u"/>
-        <Key android:codes="108" android:iconPreview="@drawable/phonetic_l_u_l" android:keyIcon="@drawable/phonetic_l_u"/>
-        <Key android:codes="45" android:iconPreview="@drawable/phonetic_dash_l" android:keyIcon="@drawable/phonetic_dash" android:keyEdgeFlags="right"/>
+        <Key android:codes="107" android:iconPreview="@drawable/phonetic_k_s_l" android:keyIcon="@drawable/phonetic_k_s"/>
+        <Key android:codes="108" android:iconPreview="@drawable/phonetic_l_s_l" android:keyIcon="@drawable/phonetic_l_s"/>
+        <Key android:codes="59" android:iconPreview="@drawable/phonetic_semicolon_l" android:keyIcon="@drawable/phonetic_semicolon"/> android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
@@ -75,16 +75,18 @@
         <Key android:codes="98" android:iconPreview="@drawable/phonetic_b_s_l" android:keyIcon="@drawable/phonetic_b_s"/>
         <Key android:codes="110" android:iconPreview="@drawable/phonetic_n_s_l" android:keyIcon="@drawable/phonetic_n_s"/>
         <Key android:codes="109" android:iconPreview="@drawable/phonetic_m_s_l" android:keyIcon="@drawable/phonetic_m_s"/>
-        <Key android:codes="59" android:iconPreview="@drawable/phonetic_semicolon_l" android:keyIcon="@drawable/phonetic_semicolon"/>
+        <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l"  android:keyIcon="@drawable/phonetic_comma"/>
         <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
         <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
     </Row>
     
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l" android:keyWidth="15%p" android:keyIcon="@drawable/phonetic_comma"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="25%p" android:isRepeatable="true"/>
+        <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done"  android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
+        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
+			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" />
+        <Key android:codes="-9" android:keyIcon="@drawable/sw"  android:iconPreview="@drawable/sw_l"/>     
+        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="20%p" android:isRepeatable="true"/>
+        <Key android:codes="45" android:iconPreview="@drawable/phonetic_dash_l" android:keyIcon="@drawable/phonetic_dash"/>
         <Key android:codes="-5" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyWidth="15%p" android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
