--- a/branches/limehd/res/values-xlarge-land/dimens.xml
+++ b/branches/limehd/res/values-xlarge-land/dimens.xml
@@ -19,6 +19,7 @@
 -->
 
 <resources>
+	<dimen name="phone_key_height">72dip</dimen>
     <dimen name="key_height">76dip</dimen>
     <dimen name="candidate_font_height">38sp</dimen>
     <dimen name="candidate_vertical_padding">6sp</dimen>
