1. Bug fixed on softkeyboard enter key. 2. Tune the CandidateView font size for 10.1 tab.

--- a/branches/limehd/res/values-xlarge-land/dimens.xml
+++ b/branches/limehd/res/values-xlarge-land/dimens.xml
@@ -21,6 +21,7 @@
 <resources>
 	<dimen name="phone_key_height">72dip</dimen>
     <dimen name="key_height">76dip</dimen>
-    <dimen name="candidate_font_height">38sp</dimen>
+    <dimen name="candidate_font_height">42sp</dimen>
+    <dimen name="candidate_number_font_height">20sp</dimen>
     <dimen name="candidate_vertical_padding">6sp</dimen>
 </resources>
