--- a/branches/limehd/res/xml/lime_dayi_shift.xml
+++ b/branches/limehd/res/xml/lime_dayi_shift.xml
@@ -91,10 +91,10 @@
 		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
 			android:keyWidth="30%p" android:isRepeatable="true" />
 		<Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
-		<Key android:codes="62" android:keyLabel="&gt;" android:keyWidth="10%p" />
-		<Key android:codes="63" android:keyLabel="\?"
+		<Key android:codes="62" android:keyLabel="&gt;" 
 								android:popupKeyboard="@xml/popup_punctuation"  
 								android:keyWidth="10%p" />
+		<Key android:codes="63" android:keyLabel="\?" android:keyWidth="10%p" />
 		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
 			android:keyWidth="15%p" android:keyEdgeFlags="right" />
 	</Row>
