--- a/branches/limehd/res/xml/lime_phonetic.xml
+++ b/branches/limehd/res/xml/lime_phonetic.xml
@@ -76,7 +76,8 @@
         <Key android:codes="110" android:iconPreview="@drawable/phonetic_n_s_l" android:keyIcon="@drawable/phonetic_n_s"/>
         <Key android:codes="109" android:iconPreview="@drawable/phonetic_m_s_l" android:keyIcon="@drawable/phonetic_m_s"/>
         <Key android:codes="44" android:iconPreview="@drawable/phonetic_comma_l"  android:keyIcon="@drawable/phonetic_comma"/>
-        <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
+        <Key android:codes="46" android:iconPreview="@drawable/phonetic_dot_l" 
+        		android:popupKeyboard="@xml/popup_c_punctuation" android:keyIcon="@drawable/phonetic_dot"/>
         <Key android:codes="47" android:iconPreview="@drawable/phonetic_slash_l" android:keyIcon="@drawable/phonetic_slash"/>
     </Row>
     
