--- a/branches/limehd/res/layout/input.xml
+++ b/branches/limehd/res/layout/input.xml
@@ -26,4 +26,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/keyboard_background"
         android:keyBackground="@drawable/btn_keyboard_key"
+        android:keyTextSize = "@dimen/key_text_size"
+        android:labelTextSize = "@dimen/label_text_size"
         />
