1. Add show number row in English keyboards option. 2. Bugs fixed in MORD_URL / MODE_EMAIL shifted keyboard switching.
!! Ready for next release!!

--- a/branches/limehd/res/xml/preference.xml
+++ b/branches/limehd/res/xml/preference.xml
@@ -45,7 +45,12 @@
                 android:summary="@string/default_in_english_summary"
             	android:defaultValue="false" 
                 />
-       
+       <CheckBoxPreference
+                android:key="number_row_in_english"
+                android:title="@string/number_row_in_english" 
+                android:summary="@string/number_row_in_english_summary"
+            	android:defaultValue="false" 
+                />
         <CheckBoxPreference
                 android:key="vibrate_on_keypress"
                 android:defaultValue="false" 
