--- a/branches/limehd/res/xml/lime_number.xml
+++ b/branches/limehd/res/xml/lime_number.xml
@@ -92,7 +92,7 @@
         		android:keyLabel="."
         		android:popupKeyboard="@xml/popup_c_punctuation"   
         		android:keyWidth="10%p"/>
-        <Key android:codes="-2" android:keyIcon="@drawable/number" android:iconPreview="@drawable/number_l"/>
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
     
