1. Bug fixed on popup composingtext width incorrect. 2. Enlarge the composing text on xlarge tablets

--- a/branches/limehd/res/values-xlarge/dimens.xml
+++ b/branches/limehd/res/values-xlarge/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
     <dimen name="key_text_size">36dip</dimen>
     <dimen name="label_text_size">30dip</dimen>
+     <dimen name="composing_text_size">24sp</dimen>
 </resources>
