--- a/branches/limehd/res/values/dimens.xml
+++ b/branches/limehd/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
     <dimen name="key_text_size">22dip</dimen>
     <dimen name="label_text_size">16dip</dimen>
+    <dimen name="composing_text_size">18sp</dimen>
 </resources>
