--- a/branches/limehd/res/layout/composingtext.xml
+++ b/branches/limehd/res/layout/composingtext.xml
@@ -3,7 +3,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
-    android:textSize="18sp"
+    android:textSize="@dimen/composing_text_size"
     android:textColor="?android:attr/textColorPrimaryInverse"
     android:minWidth="0dip"
     android:gravity="top" android:background="@color/candidate_dictionary_background"/>
