--- a/branches/limehd/res/xml/lime_english_number.xml
+++ b/branches/limehd/res/xml/lime_english_number.xml
@@ -123,10 +123,7 @@
     <Row android:keyboardMode="@+id/mode_normal" android:rowEdgeFlags="bottom">
     	<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" 
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="10%p" />
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" android:keyWidth="10%p" />
         <Key android:keyLabel="," android:keyWidth="10%p" />
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
@@ -141,10 +138,7 @@
     <Row android:keyboardMode="@+id/mode_url" android:rowEdgeFlags="bottom">
         <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="10%p" />
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" android:keyWidth="10%p" />
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
                 android:popupKeyboard="@xml/popup_domains"
@@ -163,10 +157,7 @@
     <Row android:keyboardMode="@+id/mode_email" android:rowEdgeFlags="bottom">
     	<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="10%p" />
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" android:keyWidth="10%p" />
         <Key android:keyLabel="\@" android:keyWidth="10%p"/>
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
@@ -185,10 +176,7 @@
     <Row android:keyboardMode="@+id/mode_im" android:rowEdgeFlags="bottom">
     	<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="15%p"/>
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" android:keyWidth="15%p"/>
         <Key android:keyLabel="," android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
