--- a/branches/limehd/res/xml/lime_english_shift.xml
+++ b/branches/limehd/res/xml/lime_english_shift.xml
@@ -109,18 +109,15 @@
                 android:isRepeatable="true"/>
     </Row>
 
-    <Row android:keyboardMode="@+id/mode_normal" android:rowEdgeFlags="bottom">
+       <Row android:keyboardMode="@+id/mode_normal" android:rowEdgeFlags="bottom">
     	<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" 
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="10%p" />
-        <Key android:keyLabel="," android:keyWidth="10%p" />
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"  android:keyWidth="10%p" />
+        <Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation" 
+        <Key android:codes="62" android:keyLabel="&gt;" android:popupKeyboard="@xml/popup_punctuation" 
                 android:keyWidth="10%p"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
                 android:iconPreview="@drawable/sym_keyboard_feedback_return"
@@ -130,19 +127,16 @@
     <Row android:keyboardMode="@+id/mode_url" android:rowEdgeFlags="bottom">
         <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key"
-                android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="_"
-                android:keyWidth="10%p" />
+        <Key android:codes="-2" android:keyLabel="@string/label_symbol_key" android:keyWidth="10%p" />
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
                 android:popupKeyboard="@xml/popup_domains"
                 android:keyWidth="15%p"/>
-        <Key android:keyLabel="/" android:keyWidth="10%p"/>
+        <Key android:keyLabel="\?" android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation"
+        <Key android:codes="62" android:keyLabel="&gt;" android:popupKeyboard="@xml/popup_punctuation"
                 android:keyWidth="10%p"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
                 android:iconPreview="@drawable/sym_keyboard_feedback_return"
@@ -156,7 +150,7 @@
                 android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="_"
                 android:keyWidth="10%p" />
-        <Key android:keyLabel="\@" android:keyWidth="10%p"/>
+        <Key android:keyLabel="/" android:keyWidth="10%p"/>
         <Key android:keyLabel="@string/popular_domain_0"
                 android:keyOutputText="@string/popular_domain_0"
                 android:popupKeyboard="@xml/popup_domains"
@@ -164,7 +158,7 @@
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation"
+        <Key android:codes="62" android:keyLabel="&gt;" android:popupKeyboard="@xml/popup_punctuation"
                 android:keyWidth="10%p"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
                 android:iconPreview="@drawable/sym_keyboard_feedback_return"
@@ -178,11 +172,11 @@
                 android:popupKeyboard="@xml/popup_template"
                 android:popupCharacters="_"
                 android:keyWidth="15%p"/>
-        <Key android:keyLabel="," android:keyWidth="10%p"/>
+        <Key android:codes="60" android:keyLabel="&lt;" android:keyWidth="10%p" />
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space"
                 android:iconPreview="@drawable/sym_keyboard_feedback_space"
                 android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:popupKeyboard="@xml/popup_punctuation" 
+        <Key android:codes="62" android:keyLabel="&gt;" android:popupKeyboard="@xml/popup_punctuation" 
                 android:keyWidth="10%p"/>
         <Key android:keyLabel=":-)" android:keyOutputText=":-) "
                 android:popupKeyboard="@xml/popup_smileys"
