--- a/branches/limehd/res/layout/kbsetting.xml
+++ b/branches/limehd/res/layout/kbsetting.xml
@@ -9,9 +9,8 @@
 
 	<ScrollView android:layout_width="fill_parent" android:padding="5px"
 		android:id="@+id/IMSettingScrollView" android:layout_height="fill_parent">
-		<LinearLayout android:id="@+id/LinearLayout04"
-			android:orientation="vertical"
-			android:layout_width="fill_parent" android:layout_height="fill_parent">
+		<LinearLayout android:orientation="vertical"
+			android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/kbLinearLayout">
 			<LinearLayout android:id="@+id/LinearLayout02"
 				android:layout_height="wrap_content" android:paddingBottom="15px"
 				android:paddingTop="10px" android:layout_width="fill_parent">
