1. Add phonetic adv mapping download button, 2. Add AlertDialog for all download operation, 3. Add new string label for phonetic adv related opertaions

--- a/branches/limehd/res/layout/kbsetting.xml
+++ b/branches/limehd/res/layout/kbsetting.xml
@@ -26,8 +26,12 @@
 			
 
 			<LinearLayout android:id="@+id/extendLayout"
-				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:paddingBottom="15px" android:paddingTop="10px">
+				android:layout_height="wrap_content"
+				android:paddingBottom="5px" android:paddingTop="5px" android:layout_width="fill_parent">
+			</LinearLayout>
+			<LinearLayout android:id="@+id/extendLayout2"
+				android:layout_height="wrap_content"
+				android:paddingBottom="5px" android:paddingTop="5px" android:layout_width="fill_parent">
 			</LinearLayout>
 			
 			<LinearLayout android:id="@+id/LinearLayout03"
