--- a/branches/limehd/res/layout/progress.xml
+++ b/branches/limehd/res/layout/progress.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:padding="10dip" android:orientation="vertical">
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center" android:layout_gravity="center" android:id="@+id/txtLoadingStatus" android:text="@string/lime_loading" android:padding="5dip"></TextView>
-    <ProgressBar android:id="@+id/progressBar1" style="?android:attr/progressBarStyleLarge" android:layout_gravity="center" android:padding="10dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="30dip" android:layout_marginRight="30dip"></ProgressBar>
-    <Button android:text="@string/lime_loading_cancel" android:id="@+id/btn_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" ></Button>
+  android:padding="10dip" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
+    <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center_horizontal|center" android:layout_width="wrap_content" android:layout_gravity="center">
+        <ProgressBar android:layout_width="210dip" android:padding="10dip" android:progress="0" android:max="100" style="?android:attr/progressBarStyleHorizontal" android:id="@+id/progressBar" android:layout_height="wrap_content"></ProgressBar>
+        <TextView android:id="@+id/txtLoadingStatus" android:layout_height="wrap_content" android:padding="5dip" android:layout_width="wrap_content" android:text="0%" ></TextView>
+    </TableRow>
+    <Button android:text="@string/lime_loading_cancel" android:layout_height="wrap_content" android:id="@+id/btn_cancel" android:layout_weight="1" android:layout_width="250dip" android:layout_gravity="center_horizontal|center"></Button>
     
 </LinearLayout>
