--- a/res/layout/candidates.xml
+++ b/res/layout/candidates.xml
@@ -18,7 +18,7 @@
 */
 -->
 
-<net.toload.main.CandidateViewContainer
+<net.toload.main.hd.candidate.CandidateViewContainer
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -48,7 +48,7 @@
     </LinearLayout>
     
     <view xmlns:android="http://schemas.android.com/apk/res/android"
-		    class="net.toload.main.hd.CandidateView"
+		    class="net.toload.main.hd.candidate.CandidateView"
 	        android:id="@+id/candidates"
 	        android:layout_width="wrap_content"
 	        android:layout_height="38dp"
@@ -77,4 +77,4 @@
             />
     </LinearLayout>        
     
-</net.toload.main.CandidateViewContainer>
+</net.toload.main.hd.candidate.CandidateViewContainer>
