--- a/res/layout/keyboard_popup.xml
+++ b/res/layout/keyboard_popup.xml
@@ -26,16 +26,16 @@
         android:paddingLeft="16dip"
         android:paddingRight="16dip"
         >
-    <net.toload.main.hd.LIMEKeyboardBaseView
-            xmlns:latin="http://schemas.android.com/apk/res/net.toload.main.hd"
+    <net.toload.main.hd.keyboard.LIMEKeyboardBaseView
+            xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
             android:id="@+id/LIMEKeyboardBaseView"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/limekeyboard_transparent"
 
-            latin:keyBackground="@drawable/btn_keyboard_key_gingerbread_popup"
-            latin:keyHysteresisDistance="0dip"
-            latin:verticalCorrection="@dimen/mini_keyboard_vertical_correction"
+            limehd:keyBackground="@drawable/btn_keyboard_key_gingerbread_popup"
+            limehd:keyHysteresisDistance="0dip"
+            limehd:verticalCorrection="@dimen/mini_keyboard_vertical_correction"
             />
 </LinearLayout>
